# micrograd-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust_cd.yml  rust_ci.yml
examples/: gradient_descent.rs  scalar_back_propagation.rs
src/: layer.rs  lib.rs  mlp.rs  neuron.rs  value.rs
